--- a/photography.html
+++ b/photography.html
@@ -34,7 +34,7 @@
 	<div class="pillar">
 		<img src="images/bridge.jpg" alt="Bridge" width="300px" height="200px">
 		<br>
-		<img src="images/weird.jpg" alt="Weird" width="300px" height="200px">
+		<img src="images/weird.JPG" alt="Weird" width="300px" height="200px">
 	</div>
 	<div class="pillar">
 		<img src="images/car.jpg" alt="Car" width="300px" height="200px">
