--- a/design.html
+++ b/design.html
@@ -23,7 +23,7 @@
 <body background="images/background.jpg">
 
 <div class="column">
-	<span class="z"><img src="images/design.png" alt="Illustrator" width="400px" height="300px"></span>
+	<span class="z"><img src="images/design.PNG" alt="Illustrator" width="400px" height="300px"></span>
 	<h1>&nbsp &nbspThis is some work I done on<br> &nbsp &nbsp &nbsp &nbsp  Adobe Illustrator</h1>
 
 	<span class="y"><img src="images/design2.png" alt="Condom" width="400px" height="300px"></span>
